--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,10 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/ma
 <name>Jelery</name>
 <url>http://timd.cn</url>
 
+<properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+</properties>
+
 <dependencies>
     <dependency>
         <groupId>junit</groupId>
